fittings/crates/macros/tests/ui/fail/associated_type.stderr
error: service traits cannot declare associated types
 --> tests/ui/fail/associated_type.rs:3:5
  |
3 |     type Response;
  |     ^^^^
